sandbox/output
MockTurnNumberSequence.java:19: error: cannot find symbol
            throw IllegalStateException("method getNextTurnNumber() should be called once");
                  ^
  symbol:   method IllegalStateException(String)
  location: class MockTurnNumberSequence
1 error
